# burned_segmentation

./: .gitignore  README.md  pyproject.toml
configs/datasets/: ems.py  ems_16ch.py
configs/models/: segformer_mit-b0.py  segformer_mit-b0_aux.py  segformer_mit-b3_aux.py  segformer_mit-b3_aux_no_pre.py  segformer_mit-b5_aux.py  upernet_rn50.py  upernet_rn50_13ch.py  upernet_rn50_14ch.py  upernet_rn50_16ch.py  upernet_rn50_18ch.py  upernet_rn50_6ch.py  upernet_rn50_aux.py  upernet_rn50_aux_no_pre.py  upernet_rn50_copy.py  upernet_rn50_no_pre.py  upernet_rn50_no_pre_13ch.py  upernet_rn50_swin.py  upernet_swin.py  upernet_vit-s.py  upernet_vit-s_aux.py  upernet_vit-s_aux_no_pre.py  upernet_vit-s_no_pre.py  upernet_vit-s_no_pre_13ch.py
configs/multi/pretrained/: ems_segformer-mit-b3_multi_50ep.py
configs/multi/pretrained/dice/: ems_segformer-mit-b3_multi_10ep.py
configs/single/no_pretrained/: ems_upernet-rn50_single_no_pre_50ep.py
configs/single/pretrained/: ems_upernet-rn50_single_10ep_16ch.py  ems_upernet-rn50_single_10ep_18ch.py  ems_upernet-rn50_single_10ep_swin.py  ems_upernet-rn50_single_50ep.py  ems_upernet-rn50_single_50ep_copy.py
configs/single/pretrained/dice/: ems_upernet-rn50_single_10ep_6ch.py
configs/single/pretrained/swin/: swin.py  swin2.py
notebooks/: resnet.ipynb
src/logic/: datamodules.py  datasets.py  utils.py
src/logic.egg-info/: PKG-INFO  SOURCES.txt
src/logic/losses/: fn.py
src/logic/models/: base.py  encoder_decoder.py  segformer.py  uper.py  utils.py
src/logic/modules/: base.py  multi.py  single.py
src/logic/samplers/: samplers.py  utils.py
src/logic/tiling/: tilers.py
tools/: main.ipynb  main.py  mit2mmseg.py  ssleo2mmseg.py  ssleo2mmseg_16ch.py  swin2mmseg.py
